# doc_man_db

./: .gitattributes  .gitignore  CLAUDE.md  CLEANUP_PLAN.md  CODE_CLEANUP_PLAN.md  Cargo.toml  PROJECT_STATUS.md  RELEASE.md
.claude/: settings.local.json
config/: production.toml
deploy/: deploy.ps1
docs/: FUTURE_ROADMAP.md  FUTURE_ROADMAP_Phase1.md  FUTURE_ROADMAP_Phase2.md  FUTURE_ROADMAP_Phase3.md  admin-guide.md  api-reference.md  design-api.md  design-basic.md  design-cicd.md  design-database.md  design-graphql.md  design-setup.md  design-testing.md  design-ui.md  design.md  phase9_implementation_findings.md  requirements.md  tasks-a0_Phase1_Foundation.md  tasks-a0_Phase1_Foundation_SQLx.md  tasks-a1_Phase2_CoreFeatures.md  tasks-a2_Phase3_Security.md  tasks-a3_Phase4_UI_Notifications.md  tasks-a4_Phase5_DataMigration.md  tasks-a5_Phase6_Testing_QA.md  tasks-a6_Phase7_AdvancedFeatures.md  tasks-a7_Phase8_FinalIntegration.md  tasks-a8_Phase9_frontend_backend_graphql_integration.md  tasks.md  troubleshooting.md  user-manual.md
migrations/: 000_create_employees_table.sql  0014_create_document_number_generation_rules_table.sql  001_create_document_types_table.sql  001_create_documents_table.sql  002_create_documents_table.sql  010_create_business_tables.sql  011_create_search_history_tables.sql  012_create_circulation_tables.sql  013_create_departments_table.sql
seeds/: README.md
src/: app.rs  error.rs  lib.rs  main.rs  routes.rs
src/batch/: ad_sync.rs  data_cleanup.rs  file_check.rs  mod.rs  scheduler.rs
src/config/: mod.rs
src/graphql/: mod.rs  resolvers.rs  schema.rs  types.rs
src/handlers/: advanced_search.rs  backup.rs  batch.rs  business.rs  business_management.rs  business_search.rs  circulation.rs  csv_import.rs  deduplication.rs  graphql.rs  http.rs  migration.rs  mod.rs  monitoring.rs  validation.rs
tests/: README.md  api_handlers_test.rs  api_tests.rs  backup_handler_test.rs  backup_test.rs  basic_error_test.rs  batch_scheduler_test.rs  batch_simple_test.rs  batch_tests.rs  database_integration_test.rs  document_clean_test.rs  document_model_test.rs  document_number_generation_test.rs  document_number_generator_service_test.rs  document_repository_test.rs  document_service_test.rs  document_type_test.rs  graphql_api_test.rs  graphql_types_test.rs  handlers_tests.rs  http_api_test.rs  integration_tests.rs  migration_handler_test.rs  migration_service_test.rs  migration_test.rs  models_tests.rs  services_tests.rs  unit_tests.rs  validation_service_extended_test.rs  validation_test.rs
ui/: codegen.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+188 files in other folders)
