[package]
name = "doc_man_db"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }

# Database - SQLx
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "chrono",
    "runtime-tokio-rustls",
    "migrate",
] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# Time
chrono = { version = "0.4.41", features = ["serde"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error handling
thiserror = "2.0.15"

# Async trait support
async-trait = "0.1.89"

# GraphQL (for future phases)
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"

# CSV processing and data import
csv = "1.3.1"
uuid = { version = "1.18.0", features = ["v4", "serde"] }

# String similarity for deduplication
strsim = "0.11.1"

# For cron scheduling (batch processing)
tokio-cron-scheduler = "0.14.0"

# For backup compression
flate2 = "1.0"

# Configuration management
config = "0.14.1"

[dev-dependencies]
# Testing
tokio-test = "0.4.4"
assert_matches = "1.5.0"
mockall = "0.13.1"
proptest = "1.7.0"

# For testing database operations
tempfile = "3.20.0"

# For HTTP API testing
reqwest = { version = "0.12.23", features = ["json"] }
hyper = { version = "1.6.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
